test/zinc_source/compile_errors/iterations/03_empty_sort_dict_iteration_no_inference.zn
// expected-error: cannot infer type

fn main() {
    scores = sort_dict()
    for key, value in scores {
        print("{key}")
    }
}
